--- a/templates/views/doctorprofile.hbs
+++ b/templates/views/doctorprofile.hbs
@@ -47,7 +47,7 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item description">Category: {{doctor.category}}</li>
                             <li class="list-group-item description">Language: {{doctor.languages}}</li>
-                            <li class="list-group-item description">Consultant Fess: {{doctor.fee}}</li>
+                            <li class="list-group-item description">Consultant Fee: {{doctor.fee}}</li>
                             <li class="list-group-item description">No service in home</li>
                         </ul>
                     </div>
